Actualizar index.html

--- a/NodeJS/JSExamples/BookStore/index.html
+++ b/NodeJS/JSExamples/BookStore/index.html
@@ -11,7 +11,10 @@
 <body>
     <h2>La Libreria</h2>
     <p>
-        Pequeño ejemplo de Liberia
+        Pequeño ejemplo de Estanteria de libros.<BR/>
+        * Se muestran los libros de la estantería<BR/>
+        * Se agregan libros a la estanteria internamente<BR/>
+        * Se buscan libros en la base de datos interna<BR/>
     </p>
     <div>
         <h3>Buscar Libro Interno</h3>
