Se actualiza la lección de hoy

--- a/NodeJS/JSExamples/BookStore/index.html
+++ b/NodeJS/JSExamples/BookStore/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" HTTP-EQUIV = "text/html">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="Librerias.js"></script>
     <title>Libreria</title>
