--- a/NodeJS/NodeGuia/Socket.io/client/index.html
+++ b/NodeJS/NodeGuia/Socket.io/client/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
-  <head>
-    <title>index</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Chat con NodeJS y socket.io</title>
-    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="main.js"></script>
-    <style>
-      #messages {
-        width: 95%;
-        max-width: 400px;
-        height: 350px;
-        overflow: scroll;
-        border: 1px solid #eee;
-        box-shadow: 0px 0px 20px #ccc inset;
-      }
 
-      .message {
-        margin: 20px;
-        padding: 5px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        background-color: white;
-      }
-    </style>
-  </head>
+<head>
+  <title>index</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Chat con NodeJS y socket.io</title>
+  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript" src="main.js"></script>
+  <style>
+    #mensajes {
+      width: 95%;
+      max-width: 400px;
+      height: 350px;
+      overflow: scroll;
+      border: 1px solid #eee;
+      box-shadow: 0px 0px 20px #ccc inset;
+    }
 
-  <body>
-      <h1>Chat con NodeJS y socket.io</h1>
-      <div id="messages"></div>
-      <form onsubmit="return addMessage(this);">
-        <input id="nickname" type="text" placeholder="Nickname" />
-        <textarea id="text" placeholder="Message..."></textarea>
-        <input type="submit" value="Enviar" />
-      </form>
-  </body>
+    .mensaje {
+      margin: 20px;
+      padding: 5px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      background-color: white;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Chat con NodeJS y socket.io</h1>
+  <div id="mensajes"></div>
+  <form onsubmit="return agregarMensaje(this);">
+    <input id="alias" type="text" placeholder="Alias" />
+    <textarea id="texto" placeholder="Mensaje..."></textarea>
+    <input type="submit" value="Enviar" />
+  </form>
+</body>
+
 </html>
